# rd_kafka_example

./: Presentation.pptx
rd_kafka_consumer/: Cargo.toml
rd_kafka_consumer/src/: consumer.rs  main.rs
rd_kafka_producer/: Cargo.toml  docker-compose.yaml
rd_kafka_producer/src/: hn.rs  main.rs  producer.rs
