[package]
name = "rd_kafka_producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
urlencoding = "2.1.3"
